[package]
name = "tiny-champ-select-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0.56"
surf = { version = "2.3.2", default-features = false, features = ["h1-client"]}
async-native-tls = "0.3.3"
async-std = { version = "1.8.0", features = ["attributes"] }
serde_json = "1.0.79"

# tide = "0.16.0"
# horrorshow = "0.8.4"
# async-std = { version = "1.8.0", features = ["attributes"] }
# serde = { version = "1.0", features = ["derive"] }