[package]
name = "tiny-champ-select-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
anyhow = "1.0.56"
surf = { version = "2.3.2", default-features = false, features = ["h1-client"]}
tide = "0.16.0"
tide-websockets = "0.4.0"
async-native-tls = "0.3.3"
async-std = { version = "1.8.0", features = ["attributes"] }
async-tungstenite = { version = "0.16.1", features = ["async-std-runtime","async-native-tls"] }
async-broadcast = "0.4.0"
ignore-result = "0.2.0"
http = "*"
futures = "*"
serde_json = "1.0.79"
serde = "1.0.136"
serde_repr = "0.1.7"
tray-item = "0.7.0"
async-ctrlc = "1.2.0"
webbrowser = "0.6.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"