[package]
name = "tiny-champ-select-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true


[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = { version = "1.0", features = ["backtrace"] }
surf = { version = "2.3.2", default-features = false, features = ["h1-client"]}
tide = "0.16"
tide-websockets = "0.4.0"
async-native-tls = "0.3.3"
async-std = { version = "1.8.0", features = ["attributes"] }
async-tungstenite = { version = "0.16.1", features = ["async-std-runtime","async-native-tls"] }
async-broadcast = "0.4.0"
http = "*"
futures = "*"
serde_json = "1.0"
serde = "1.0"
serde_repr = "0.1"
tray-item = "0.7"
async-ctrlc = "1.2"
webbrowser = "0.7"
error-tools = {git = "https://github.com/sidit77/error-tools.git"}
directories = "4.0"
native-dialog = "0.6"
notify = "5.0.0-pre.15"
rust-embed="6.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"